<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/black">

    <TextView
        android:id="@+id/tw_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password_dialog_title"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        />
    <EditText
        android:id="@+id/et_current_pw"
        android:layout_below="@+id/tw_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:singleLine="true"
        android:padding="10dp"
        android:hint="@string/hint_current_pw"
        android:background="@drawable/background_edittext"
        android:inputType="textPassword"/>
    <EditText
        android:id="@+id/et_new_pw"
        android:layout_below="@+id/et_current_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:singleLine="true"
        android:padding="10dp"
        android:hint="@string/hint_new_pw"
        android:background="@drawable/background_edittext"
        android:inputType="textPassword"/>
    <EditText
        android:id="@+id/et_confirm_new_pw"
        android:layout_below="@+id/et_new_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:singleLine="true"
        android:padding="10dp"
        android:hint="@string/hint_confirm_pw"
        android:background="@drawable/background_edittext"
        android:inputType="textPassword"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/et_confirm_new_pw"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:padding="10dp"
            android:text="@string/btn_change_password_title"
            android:background="@drawable/button_background"/>
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/button_background"
            android:text="@string/btn_cancel_title"/>
    </LinearLayout>

</RelativeLayout>