<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:background="#000000">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popular_movie"
            android:textSize="@dimen/home_title_size"
            android:textStyle="bold"
            android:textColor="@color/red"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.airbnb.epoxy.EpoxyRecyclerView
            android:id="@+id/rv_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/txt_movie"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <TextView
            android:id="@+id/txt_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popular_tv"
            android:textStyle="bold"
            android:textSize="@dimen/home_title_size"
            android:textColor="@color/red"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/rv_movie"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.airbnb.epoxy.EpoxyRecyclerView
            android:id="@+id/rv_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/txt_tv"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <TextView
            android:id="@+id/txt_upcoming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upcoming"
            android:textStyle="bold"
            android:textSize="@dimen/home_title_size"
            android:textColor="@color/red"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/rv_tv"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.airbnb.epoxy.EpoxyRecyclerView
            android:id="@+id/rv_upcoming"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/txt_upcoming"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <ProgressBar
            android:id="@+id/progress_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_movie"
            app:layout_constraintBottom_toTopOf="@id/txt_tv"/>

        <ProgressBar
            android:id="@+id/progress_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_tv"
            app:layout_constraintBottom_toTopOf="@id/txt_upcoming"/>

        <ProgressBar
            android:id="@+id/progress_upcoming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_upcoming"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>